--- a/style.css
+++ b/style.css
@@ -7,30 +7,32 @@
   position: relative;
 }
 
+/* #region Default Design Mock */
 /* 
     Colors: 
         Schrift: schwarz
-        Footer: #
+        Footer: ##338533
         Farbakzent: #006600 // grün für Links, Buttons etc. 
-
-
 */
+/* #endregion */
 
+/* #region Default Container */
 body {
     width: 100%;
+    /* font-family: "Raleway", sans-serif; */
     font-size: 24px;
-    color: #ffffff;
+    color: #000000; /* Schriftfarbe */
+    min-height: 100dvh;
 }
 
 main {
     width: 100%;
     height: 100%;
+    min-height: 85dvh; /* Später überdenken*/
 
     section {
-        display: flex;
-        justify-content: center;
         width: 100%;
-        height: auto;
+        height: 100%;
     }
 }
 
@@ -38,4 +40,70 @@ main {
     width: 100%;
     max-width: 1920px;
     height: 100%;
+    justify-content: center;
+    align-items: center;
 }
+/* #endregion */
+
+/* #region global stylings */
+
+.flex-v {
+  display: flex;
+  flex-direction: column;
+}
+
+.flex-h {
+  display: flex;
+}
+
+/* #endregion */
+
+/* #region Footer */
+footer {
+  width: 100%;
+  height: 144px;
+  display: flex;
+  justify-content: center;
+
+  .footer-content{
+    width: 100%;
+    /* height: 100%; */
+    background-color: #383838;
+    display: flex;
+    flex-direction: column;
+    padding: 40px 120px;
+    
+    >div { 
+      width: 100%;
+      
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      
+      img {
+        width: 64px;
+        height: 64px;
+        color: white;
+      }
+      
+      .footer-links{
+        display: flex;
+        
+        column-gap: 25px;
+        
+        .footer-link {
+          font-size: 28px;
+          font-weight: bold;
+          
+          color: #338533;
+          
+        }
+        .footer-link:hover{
+          text-decoration: underline;
+          filter: drop-shadow(0px 0px 16px rgb(255, 255, 255, 0.3));
+        }
+      }
+    }
+  }
+}
+/* #endregion */
