--- a/style-contact.css
+++ b/style-contact.css
@@ -96,12 +96,17 @@
           font-size: 20px;
           margin-bottom: 30px;
           border-radius: 8px;
+          padding: 10px;
         }
 
         .form-btn {
+          color: antiquewhite;
           background-color: #338533;
 
           border-radius: 8px;
+        }
+        .form-btn:hover {
+          filter: drop-shadow(3px 3px 5px rgba(61, 61, 61, 0.6));
         }
       }
     }
@@ -122,7 +127,7 @@
           p {
             width: 100%;
             text-align: center;
-            font-size: 32;
+            font-size: 32px;
             font-weight: bold;
             color: #338533;
           }
