--- a/style.css
+++ b/style.css
@@ -34,14 +34,14 @@ body {
     font-family: "Raleway", sans-serif; 
     TODO - müssen noch gewählt und heruntergeladen werden
   */
-  font-size: 62.5%; 
+  font-size: 62.5%;
   /*
     62.5% von 16px = 10px = 1rem (was meinst dazu?)
     TODO - Scheint nicht zu funktionieren. Also die Schriftgröße passt sich nicht a
     Laut W3 Schools -> vw (dvw?) als responsive Einheit?
     1vw = 1% of viewport width. If the viewport is 50cm wide, 1vw is 0.5cm.
   */
-  
+
   color: #000000; /* Schriftfarbe */
   min-height: 100vh;
 }
@@ -57,8 +57,8 @@ main {
 }
 
 section {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 .content {
@@ -116,7 +116,7 @@ section {
   box-shadow: 0 4px 8px -4px rgba(0, 0, 0, 0.3);
 
   .header-box {
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items: end;
     padding-top: 1.5rem;
   }
@@ -153,7 +153,7 @@ section {
         width: 1.5rem;
         height: 1.5rem;
       }
-    
+
       .link {
         color: #000000;
       }
@@ -270,7 +270,7 @@ footer {
       justify-content: space-between;
       align-items: center;
 
-      >a {
+      > a {
         img {
           width: 4.5rem;
           height: 4.5rem;
@@ -453,7 +453,6 @@ footer {
     }
     /* #endregion */
   }
-
 }
 
 /* #endregion */
@@ -488,7 +487,7 @@ footer {
 
     padding: 4.5rem 15rem 2rem 15rem;
 
-    >div {
+    > div {
       width: 100%;
 
       h1 {
@@ -539,7 +538,7 @@ footer {
 
     padding: 4.5rem 15rem 2rem 15rem;
 
-    >div {
+    > div {
       width: 100%;
 
       h1 {
@@ -606,6 +605,79 @@ footer {
 
 /* #endregion */
 
+/**
+* ====================
+* === Dayli Recipe page ===
+* ====================
+*/
 
+/* #region Hero-Section */
+.hero-section {
+  padding: 4rem 1rem;
+  justify-content: center;
 
+  .hero-box {
+    align-items: flex-start;
+    gap: 2rem;
+    .hero-image {
+      width: 30rem;
+      max-width: 100%;
+      object-fit: cover;
+      border-radius: 0.5rem;
+    }
 
+    .hero-description {
+      flex: 1;
+      min-width: 30rem;
+
+      h2 {
+        margin-top: 0;
+        font-size: 2rem;
+      }
+
+      p {
+        font-size: 1.25rem;
+        margin: 1rem 0;
+      }
+
+      button {
+        margin-top: 4%;
+        font-size: 1rem;
+        border-style: none;
+        padding: 0.76rem 4rem;
+        background-color: #008000;
+        color: white;
+      }
+    }
+  }
+}
+
+/* #endregion Hero-Section */
+
+/* #region Something-New-Section */
+
+.something-new-section {
+  background-color: rgb(241, 241, 241);
+  padding: 2rem 0 6rem 0;
+
+  h2 {
+    text-align: center;
+    font-size: 2rem;
+    margin-bottom: 2rem;
+  }
+
+  .something-new-container {
+    justify-content: space-around;
+    .meal-box {
+      a {
+        flex-direction: column;
+        align-items: center;
+        span {
+          font-size: 1.5rem;
+        }
+      }
+    }
+  }
+}
+
+/* #endregion Something-New-Section */
