deactivate daily recipe style on recipe-m page

--- a/style.css
+++ b/style.css
@@ -593,12 +593,12 @@ footer {
 
 
 /* #region header */
-#nav-recipe-of-day {
+/* #nav-recipe-of-day {
   color: #008000;
   text-decoration: underline #008000;
   text-decoration-thickness: 0.25rem;
   text-underline-offset: 0.6rem;
-}
+} */
 /* #endregion header */
 
 /* #region main */
