--- a/style.css
+++ b/style.css
@@ -78,9 +78,9 @@ section {
 }
 
 .meals-picture {
-  width: 15rem;
-  height: 15rem;
-  border-radius: 0.3rem;
+  width: 18rem;
+  height: 18rem;
+  border-radius: 0.7rem;
   box-shadow: 1px 4px 12px -4px rgba(0, 0, 0, 0.3);
 }
 
@@ -190,28 +190,58 @@ h3 {
 /* #region main */
 
 /* #region welcome-section */
-
 .welcome-section {
   padding: 4.5rem 0 2rem 0;
 
   h1 {
     text-align: center;
   }
+}
+/* #endregion welcome-section */
 
-  h3 {
-    text-align: center;
-    padding-top: 3rem;
+/* #region article-section */
+.article-section {
+  padding-top: 4.5rem;
+  padding-bottom: 4rem;
+  background-color: rgb(241, 241, 241);
+  >div {
+
+    >div {
+      justify-content: space-evenly;
+      img {
+        width: 20%;
+        height: auto;
+      }
+      .article {
+        padding-left: 5%;
+        justify-content: space-between;
+      }
+    }
   }
+}
+/* #endregion article-section */
 
-  .meals-selection {
-    justify-content: space-evenly;
-    padding: 3.5rem 0 2.5rem 0;
+/* #region course-menu-section */
 
-    .meal {
-      gap: 0.5rem;
+.course-menu-section{
+  padding-top: 4.5rem;
+  padding-bottom: 2rem;
 
-      .meal-name {
-        text-align: center;
+  >div {
+    
+    h2 {
+      text-align: center;
+      padding-bottom: 4rem;
+    }
+    
+    .meals-selection {
+      width: 100%;
+      justify-content: space-between;
+      align-items: center;
+      padding-bottom: 2rem;
+      
+      .meal {
+        align-items: center;
       }
     }
   }
@@ -222,44 +252,38 @@ h3 {
 /* #region inspiration-section */
 
 .inspiration-section {
-  padding: 4.5rem 0 4.5rem 0;
+  padding-top: 4.5rem;
+  padding-bottom: 2rem;
   background-color: rgb(241, 241, 241);
 
-  h2 {
-    text-align: center;
-  }
+  >div {
 
-  .meals-selection {
-    justify-content: space-evenly;
-    align-items: center;
-    padding: 4.5rem 0 4.5rem 0;
-
-    .icon {
-      width: 4.25rem;
-      height: 4.25rem;
-      fill: #008000; /* Farbe hier ändern */
-      cursor: pointer;
+    h2 {
+      text-align: center;
+      padding-bottom: 4rem;
     }
-
-    .icon:hover {
-      fill: #006000;
-    }
-
-    .meal {
-      gap: 0.5rem;
+    
+    .meals-selection {
+      width: 100%;
+      justify-content: space-between;
       align-items: center;
-
+      padding-bottom: 2rem;
+      
+      .meal {
+        align-items: center;
+        
+      }
     }
   }
 
-  .meal-selection-icons {
+  /* .meal-selection-icons {
     justify-content: center;
     .selection-icon {
       width: 1rem;
       height: 1rem;
       fill: #008000;
     }
-  }
+  } */
 }
 
 /* #endregion inspiration-section */
